[gd_scene load_steps=13 format=3 uid="uid://dh77pasw6i0du"]

[ext_resource type="Script" uid="uid://c1j8xgtk8arc1" path="res://scripts/workshop_item.gd" id="1_3n22l"]
[ext_resource type="Texture2D" uid="uid://bxcwvnvchjy4v" path="res://img/ui/popup/buy_button.png" id="1_kal5l"]
[ext_resource type="StyleBox" uid="uid://l7ml62qm5sdc" path="res://tres/presets/button_style.tres" id="3_dujvl"]
[ext_resource type="StyleBox" uid="uid://vplgq7bjvkbg" path="res://tres/presets/button_disabled.tres" id="3_ixxfg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhuxc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3n22l"]
texture = ExtResource("1_kal5l")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mjbpm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixxfg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dujvl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6nyb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ixxfg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3n22l"]

[node name="WorkshopItem" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3n22l")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rhuxc")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3n22l")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 30
text = "NAME"
fit_content = true
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_mjbpm")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(123, 0)
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ixxfg")

[node name="ItemImage" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 146)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 1

[node name="UpgradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dujvl")
theme_override_styles/disabled = ExtResource("3_ixxfg")
theme_override_styles/hover = ExtResource("3_dujvl")
theme_override_styles/pressed = ExtResource("3_dujvl")
theme_override_styles/normal = ExtResource("3_dujvl")
text = "UPGRADE"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 50

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v6nyb")

[node name="ItemList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer2/PanelContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_ixxfg")
theme_override_styles/selected = SubResource("StyleBoxEmpty_3n22l")
allow_search = false
same_column_width = true
fixed_icon_size = Vector2i(32, 32)
